--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.0",
     "ts-node-dev": "^1.0.0-pre.60"
